--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -6,7 +6,7 @@
 @import "compass/reset";
 @charset "utp-8";
 @import "bourbon";
-
+@import "font-awesome";
 @include font-face(woodygoodies2nf, '../fonts/woodygoodies2nf/woodygoodies2nf-webfont');
 
 $red: #D8392F;
@@ -26,7 +26,7 @@ body {
 	font-size: 16px;
 	margin: auto;
 }
-header {
+body > header {
 	background: rgba(white, 0.85);
 }
 nav {
@@ -48,11 +48,15 @@ nav {
 		.center {
 			width: 310px;
 			float: left;
+			
+			
 		}
 		.right-nav {
+			width: calc(50% - 155px);
 			width: -webkit-calc(50% - 155px);
 			height: 100%;
 			float: left;
+			
 			li {
 				
 				a {
@@ -63,18 +67,22 @@ nav {
 		.bottom-nav {
 			clear: both;
 		}
+		ul {
+			height: 100%;
+		}
 		li {
 			display: block;
-			height: 113px;
+			height: 112px;
 			a {
 				
-				line-height: 113px;
+				line-height: 112px;
+				//padding: 6% 0;
 				display: block;
 				text-align: center;
 				@include transition(box-shadow ease-in-out 0.5s);
 				text-decoration: none;
 				color: $red;
-				font-size: 3vw;
+				font-size: 1.5em;
 				border-radius: 10px;
 				
 			}
@@ -99,11 +107,24 @@ nav {
 		text-align: center;
 		text-shadow: 0px 1px 1px black;
 		color: $red;
-		font-size: 5vw;
+		font-size: 3.0em;
 		i {
 			font-family: woodygoodies2nf;
 			margin-top: 3px;
-			font-size: 3vw;
+			font-size: 0.6em;
 		}
+	}
+}
+.overview-1 {
+	width: 100%;
+	background: rgba(#FFFFFF, 0.8);
+	@include clearfix;
+	article {
+		width: calc(33.33% - 30px);
+		margin-left: 15px;
+		float: left;
+	}
+	article:first-child {
+		margin-left: 0;
 	}
 }
