--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -12,6 +12,7 @@ $FontAwesomePath: "../fonts/font-awesome/";
 
 $red: #D8392F;
 $element-background: rgba(white, 0.85);
+$element-background-accepted: rgba(green, 0.5);
 
 * {
 	@include box-sizing(border-box);
@@ -23,7 +24,7 @@ html {
 	background-size: cover;
 }
 body {
-	min-width: 900px;
+	min-width: 1000px;
 	max-width: 1600px;
 	font-size: 16px;
 	margin: auto;
@@ -84,12 +85,14 @@ nav {
 				@include transition(box-shadow ease-in-out 0.5s);
 				text-decoration: none;
 				color: $red;
-				font-size: 1.5em;
+				font-size: 2.0em;
+				font-weight: 100;
 				border-radius: 10px;
 				
 			}
 			a:hover {
 				box-shadow: inset 0px 0px 15px 0px $red;
+				cursor: default;
 				
 			}
 			a:active {
@@ -111,6 +114,7 @@ nav {
 		text-shadow: 0px 1px 1px black;
 		color: $red;
 		font-size: 3.0em;
+		font-weight: 200;
 		i {
 			font-family: woodygoodies2nf;
 			margin-top: 3px;
@@ -118,7 +122,7 @@ nav {
 		}
 	}
 }
-.overview-1, .contact-us-1 {
+.overview-1, .contact-us-1, .location-1 {
 	
 	width: 100%;
 	background: $element-background;
@@ -130,6 +134,7 @@ nav {
 			padding: 15px;
 			line-height: 1.5;
 			color: $red;
+			font-weight: 600;
 			i {
 				border-color: $red;
 			}
@@ -138,6 +143,7 @@ nav {
 		border: 1px solid $red;
 		border-radius: 7px;
 		width: calc(33.33% - 35px);
+		width: -webkit-calc(33.33% - 35px);
 		margin-left: 25px;
 		float: left;
 		font-size: 1.5em;
@@ -147,6 +153,8 @@ nav {
 			padding: 0 15px 15px;
 			font-size: 0.75em;
 			text-indent: 1.5em;
+			font-weight: 200;
+			line-height: 1.2;
 			
 		}
 		img {
@@ -162,12 +170,49 @@ nav {
 		//margin-left: 0;
 	}
 }
+.location-1 {
+	color: $red;
+	padding: 25px;
+	
+	.map {
+		border: 2px solid $red ;
+		padding: 10px;
+		position: relative;
+	    padding-bottom: 56.25%;
+	    padding-top: 30px;
+	    height: 0;
+	    overflow: hidden;
+	    iframe {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+	    }
+	    object {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+	    }
+	    embed {
+		    position: absolute;
+		    top: 0;
+		    left: 0;
+		    width: 100%;
+		    height: 100%;
+	    }
+	}
+	
+}
 footer {
 	margin-top: 100px;
 	background: $element-background;
 	height: 100px;
 	font-size: 1.1em;
 	padding: 0 25px;
+	font-weight: 200;
 	nav {
 		float: left;
 		height: 100px;
@@ -181,21 +226,48 @@ footer {
 				color: $red;
 				line-height: 100px;
 				display: block;
+				
+			}
+			a:hover {
+				outline: 1px darken($red, 10%) solid;
+				
 			}
 		}
 	}
 	.copyright {
 		float: right;
 		line-height: 100px;
+		
 	}
 	
 }
-
+aside {
+	margin: 25px;
+	width: 50%;
+	border: 2px solid $red;
+	border-radius: 20px;
+	float: right;
+	padding: 25px;
+	font-size: 24px;
+	color: darker($red, 10%);
+	h3 {
+		font-size: 1.5em;
+		color: darken($red, 10%);
+	}
+	ul {
+		padding: 10px;
+	}
+	li {
+		padding: 15px;
+		list-style-type: square;
+		color: darken($red, 10%);
+	}
+}
 .contact-us {
-	
+	float: left;
 	padding: 0 25px;
 	.label {
-		color: $red;
+		color: darken($red, 10%);
 		margin-top: 15px;
 		margin-bottom: 10px;
 		font-size: 1.2em;
@@ -213,13 +285,37 @@ footer {
     		font-size: 0.7em;
 		}
 	}
+	option {
+		display: block;
+		padding: 5px;
+		font-size: 1.0em;
+		width: 285px;
+	}
 	textarea {
 		display: block;
+		width: 285px;
+		border: solid 1px $red;
+		height: 40px;
+		font-size: 1.3em;
+		
+		@include placeholder {
+			color: $red;
+			font-size: 0.7em;
+		}
+		
 	}
+	textarea:hover {
+			box-shadow: 0px 0px 5px $red;
+		}
+	textarea:focus {
+			box-shadow: 0px 0px 5px $red;
+			outline: none;
+		}
 		#{$all-text-inputs} {
-	  border: 1px solid green;
+	  border: 1px solid $red;
 	  background: white;
-	  @include transition (all 0.25s ease-in);
+	  width: 285px;
+	  @include transition (all 0.25s ease-in-out);
 	}
 	
 	#{$all-text-inputs-hover} { 
@@ -232,16 +328,51 @@ footer {
 	  @include transform(scale(1.1));
 	}
 	select {
-		width: 150px;
+		width: 285px;
 		display: block;
+		
+		font-size: 1.0em;
 	}
 	label[for="male"], label[for="female"], label[for="both"],  label[for="sights"], label[for="architecture"], label[for="nature"] {
 		margin: 0;
 		font-size: 1.0em;
+		color: $red;
 	}
 	input[type="checkbox"], input[type="radio"] {
 		display: inline;
+		color: $red;
 	}
+		.button {
+	width: auto;
+	background-color: white;
+	box-shadow: 0px 1px 0px rgba(255,255,255,0.5) inset;
+	color: $red;
+	padding: 10px 20px 11px;
+	border-radius: 3px;
+	border: solid 2px $red;
+	display: inline-block;
+	font-weight: 700;
+	line-height: 1;
+	margin: 0;
+	margin-top: 15px;
+	font-family: inherit;
+	font-size: 14px;
+	text-align: center;
+	text-decoration: none;
+	-webkit-transition: all 0.15s ease-in-out;
+	-moz-transition: all 0.15s ease-in-out;
+	transition: all 0.15s ease-in-out;
+	
+}
+.button.large {
+	
+}
+
+.button:hover, .button:active {
+	background: $red;
+	color: white;
+}
+	
 	.disappear-appear {
 		padding: 5px;
 		display: none;
@@ -251,4 +382,32 @@ footer {
 	}
 	
 }
-
+.accepted {
+	background: $element-background-accepted;
+	min-height: 500px;
+	padding-top: 100px;
+	h1 {
+		
+		line-height: 125%;
+		background: $element-background;
+		text-align: center;
+		text-shadow: 0px 1px 1px black;
+		color: $red;
+		font-size: 3.0em;
+		i {
+			font-family: woodygoodies2nf;
+			margin-top: 3px;
+			font-size: 0.6em;
+		}
+		
+		}
+		p {
+			
+		line-height: 125%;
+		background: $element-background;
+		text-align: center;
+		text-shadow: 0px 1px 1px black;
+		color: $red;
+		font-size: 2em;
+		}
+}
