Change colour to blue

--- a/sass/screen.scss
+++ b/sass/screen.scss
@@ -10,7 +10,7 @@ $FontAwesomePath: "../fonts/font-awesome/";
 @import "font-awesome";
 @include font-face(woodygoodies2nf, '../fonts/woodygoodies2nf/woodygoodies2nf-webfont');
 
-$red: #D8392F;
+$red: blue;
 $element-background: rgba(white, 0.85);
 $element-background-accepted: rgba(green, 0.5);
 
